--- a/home/home.css
+++ b/home/home.css
@@ -4,7 +4,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Outfit", Medium;
+    font-family: "Outfit";
     color: #303030;
 }
 
@@ -43,7 +43,7 @@ a{
     padding-right: 50px;
 }
 
-button, input, select{
+input, select{
     height: 40px;
     width: 200px;
 
@@ -55,6 +55,7 @@ button, input, select{
     font-size: 20px;
 
 }
+
 
 
 .svgs-header img{
@@ -77,11 +78,15 @@ button, input, select{
     width: 500px;
 }
 
+
+
 .texto-about{
     padding: 100px 150px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+
+    cursor: default;
 }
 
 .texto-about h1{
@@ -90,11 +95,15 @@ button, input, select{
 
     display: flex;
     align-items: self-start;
+
+    cursor: default;
 }
 
 .texto-about p{
     font-size: 30px;
     width: 650px;
+
+    cursor: default;
 }
 
 .banner2 img{
@@ -112,6 +121,8 @@ button, input, select{
 .produtos h2{
     font-size: 50px;
     font-family: "Nunito", Bold;
+
+    cursor: default;
 }
 
 #produtos-pesquisa{
@@ -128,4 +139,94 @@ button, input, select{
 
     height: 50px;
     width: 190px;
+}
+
+.celulares {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap; 
+    gap: 90px; 
+}
+.celulares h2{
+    padding: 50px;
+    font-family: "Nunito", Bold;
+    
+    font-size: 40px;
+
+    cursor: default;
+}
+
+.celulares h3{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+
+    font-weight: 300;
+
+    cursor: default;
+}
+
+.iphone, .samsung, .xiaomi {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    width: 600%; 
+}
+
+.iphone div, .samsung div, .xiaomi div {
+    margin-bottom: 20px;
+}
+
+.iphone img, .samsung img, .xiaomi img{
+    margin-bottom: 20px;
+}
+
+.iphone p, .samsung p, .xiaomi p{
+   font-size: 18px;
+   
+   cursor: default;
+}
+
+.produtos-iphone, .produtos-samsung, .produtos-xiaomi {
+    display: flex;
+    justify-content: space-between; 
+    gap: 100px; 
+    flex-wrap: wrap; 
+}
+
+button{
+  
+    border: 2px solid #637DBD;
+    border-radius: 40px;
+
+    height: 9%;
+    width: 55%;
+    margin-left: 70px;
+    margin-top: 30px;
+    font-size: 20px;
+
+    cursor: pointer;
+}
+
+.back{
+    height: 100px;
+
+    padding:70px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    cursor: default;
+    
+}
+
+.back p{
+    font-size: 25px;
+}
+
+.back img{
+    margin-top: 10px;
+    padding: 10px 20px;
+    height: 50px;
 }
