--- a/home/home.css
+++ b/home/home.css
@@ -251,11 +251,64 @@ button:hover{
     transform: scale(1.1);
   }
 
-  footer{
-    height: 700px;
-
-    display:flex;
-    
+  footer {
+    height: auto;
+    padding: 60px 120px;
+    display: flex;
+    justify-content: space-between;
     flex-direction: column;
-    align-items: center;
-  }
+
+}
+
+.logo{
+    display: flex;
+    justify-content: center;
+}
+
+.informacoes{
+    padding: 50px 0px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.redes{
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.redes a{
+    margin-left: 20px;
+    
+}
+
+.redes img{
+    height: 30px;
+    
+}
+
+.icones-redes{
+    display: flex;
+    justify-content: center;
+    margin-right: 30px;
+    margin-top: 25px;
+}
+
+.suporte{
+    display: flex;
+    flex-direction: column;
+}
+
+.suporte h2{
+    padding-top: 5px;
+}
+
+.suporte p{
+    padding: 10px 0px;
+    font-size: 20px;
+}
+
+.help{
+    display: flex;
+    flex-direction: column;
+}
